--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
-node_modules
-bower_components
-npm-debug.log
-.sass-cache
-.tmp
 .DS_Store
-design.md
-/dist
+node_modules/
+dist/
+npm-debug.log
+selenium-debug.log
+test/unit/coverage
+test/e2e/reports
