--- a/package.json
+++ b/package.json
@@ -1,47 +1,74 @@
 {
-  "name": "project-name",
-  "version": "0.2.0",
-  "description": "insertdescription",
-
-  "contributors": [
-    {
-      "name": "contribuidor",
-      "url": "http://twitter.com/contribuidor",
-      "email": "contribuidor@twitter.com"
-    }
-  ],
-
+  "name": "github-preview",
+  "version": "1.0.0",
+  "description": "A Vue.js project",
+  "author": "Jefferson Daniel <jeffersondaniels@hotmail.com>",
+  "private": true,
+  "scripts": {
+    "dev": "node build/dev-server.js",
+    "build": "node build/build.js",
+    "unit": "karma start test/unit/karma.conf.js --single-run",
+    "e2e": "node test/e2e/runner.js",
+    "test": "npm run unit && npm run e2e",
+    "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
+  },
+  "dependencies": {
+    "vue": "^1.0.21",
+    "babel-runtime": "^6.0.0"
+  },
   "devDependencies": {
-    "grunt-autoprefixer": "^2.2.0",
-    "grunt-concurrent": "^1.0.0",
-    "grunt-contrib-clean": "^0.6.0",
-    "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-connect": "^0.9.0",
-    "grunt-contrib-copy": "^0.8.0",
-    "grunt-contrib-cssmin": "^0.12.2",
-    "grunt-contrib-htmlmin": "^0.4.0",
-    "grunt-contrib-jshint": "^0.11.1",
-    "grunt-contrib-uglify": "^0.8.0",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-newer": "^1.1.0",
-    "grunt-sass": "^0.18.1",
-    "grunt-svgmin": "^2.0.1",
-    "grunt-usemin": "^3.0.0",
-    "jshint-stylish": "^1.0.1",
-    "load-grunt-tasks": "^3.1.0",
-    "time-grunt": "^1.1.0"
-  },
-
-  "readme": "You need in command line insert bower and npm install if necessary",
-
-  "author": "Jefferson Daniel <jeffersondaniels@hotmail.com> (http://twitter.com/jeffersondss_)",
-
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/DRYC/adamantium.git"
-  },
-
-  "engines": {
-    "node": ">=0.10.0"
+    "babel-core": "^6.0.0",
+    "babel-loader": "^6.0.0",
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "connect-history-api-fallback": "^1.1.0",
+    "css-loader": "^0.23.0",
+    "eslint": "^2.10.2",
+    "eslint-friendly-formatter": "^2.0.5",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-html": "^1.3.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-standard": "^1.3.2",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.13.3",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.4",
+    "function-bind": "^1.0.2",
+    "html-webpack-plugin": "^2.8.1",
+    "http-proxy-middleware": "^0.12.0",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.15",
+    "karma-coverage": "^0.5.5",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sinon-chai": "^1.2.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.24",
+    "karma-webpack": "^1.7.0",
+    "lolex": "^1.4.0",
+    "mocha": "^2.4.5",
+    "chai": "^3.5.0",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
+    "inject-loader": "^2.0.1",
+    "isparta-loader": "^2.0.0",
+    "phantomjs-prebuilt": "^2.1.3",
+    "chromedriver": "^2.21.2",
+    "cross-spawn": "^2.1.5",
+    "nightwatch": "^0.8.18",
+    "selenium-server": "2.53.0",
+    "ora": "^0.2.0",
+    "shelljs": "^0.6.0",
+    "url-loader": "^0.5.7",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^8.3.0",
+    "vue-style-loader": "^1.0.0",
+    "webpack": "^1.12.2",
+    "webpack-dev-middleware": "^1.4.0",
+    "webpack-hot-middleware": "^2.6.0",
+    "webpack-merge": "^0.8.3"
   }
 }
