--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,9 @@
 {
-  "name": "package",
-  "version": "0.0.0",
+  "name": "github-preview",
+  "version": "0.3.0",
   "dependencies": {
     "modernizr": "~2.8.2",
     "jquery": "~2.1.3",
-    "fastslide.js": "~1.2.0",
-    "octicons": "~2.2.2"
+    "perfect-scrollbar": "^0.6.12"
   }
 }
