--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,10 @@
 {
   "name": "github-preview",
-  "version": "0.3.0",
+  "version": "0.0.1",
   "dependencies": {
     "modernizr": "~2.8.2",
     "jquery": "~2.1.3",
-    "perfect-scrollbar": "^0.6.12"
+    "perfect-scrollbar": "^0.6.12",
+    "animate.css": "^3.5.2"
   }
 }
